Fix page top padding and make steps more readable

--- a/client/css/desktop/step-number.less
+++ b/client/css/desktop/step-number.less
@@ -1,5 +1,5 @@
 
-@step-number-spacing: 20px;
+@step-number-spacing: 15px;
 
 .step-number.left {
     margin-right: @step-number-spacing*(2/3);
