--- a/client/css/main/steps.less
+++ b/client/css/main/steps.less
@@ -2,9 +2,8 @@
 
 #step-container {
     background-color: @white-color;
-    padding-left: 31px;
-    padding-right: 31px;
-    margin-top: 30px;
+    padding-left: 1.7em;
+    padding-right: 1.7em;
     margin-bottom: 30px;
     padding-bottom: 1em;
 }
